[package]
name = "consensus"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.4"
atomic-counter = "1.0.1"
ctrlc = "3.1.3"
rand = "0.8.5"
serde_json = "1.0.40"
log = "0.4.8"
stderrlog = "0.4.1"
shellexpand = "2.1"
phf = { version = "0.8.0", features = ["macros"] }
crossbeam-channel = "0.5.6"
